--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,21 @@
+* {
+  margin    : 0;
+  padding   : 0;
+  box-sizing: border-box;
+
+}
+
+html {
+  width : 100vw;
+  height: 100vh;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing : antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
