--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,7 +2,6 @@
   margin    : 0;
   padding   : 0;
   box-sizing: border-box;
-
 }
 
 html {
@@ -18,6 +17,7 @@ body {
   -webkit-font-smoothing : antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color       : #191919;
+  color                  : #ffffff;
 }
 
 code {
